y.output
Terminais não utilizados na gramática

   NAT_FUNC
   NAT_VEC
   NAT_ESC
   NAT_PTR
   NAT_PTR_ADDR
   TOKEN_ERROR
   COUNT_DEF_ERROR
   ERROR
   SYMBOL_LIT_FLOATING


Estado 123 conflitos: 12 de deslocamento/redução
Estado 138 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: init SYMBOL_UNDEFINED

    1 init: program

    2 program: /* vazio */
    3        | type SYMBOL_IDENTIFIER func_body program
    4        | type SYMBOL_IDENTIFIER ':' value ';' program
    5        | type '$' SYMBOL_IDENTIFIER ':' value ';' program
    6        | type SYMBOL_IDENTIFIER '[' SYMBOL_LIT_INTEGER ']' ';' program
    7        | type SYMBOL_IDENTIFIER index_init program

    8 index_init: '[' SYMBOL_LIT_INTEGER ']' ':' symbol_lit_seq ';'

    9 func_body: '(' param ')' local_var_def_list command_list

   10 command_list: '{' commands '}'

   11 commands: /* vazio */
   12         | simple_command ';' commands

   13 simple_command: /* vazio */
   14               | atrib
   15               | flux_control
   16               | KW_INPUT SYMBOL_IDENTIFIER
   17               | KW_OUTPUT expression output_rest
   18               | KW_RETURN expression

   19 atrib: '+' '+' SYMBOL_IDENTIFIER
   20      | SYMBOL_IDENTIFIER '+' '+'
   21      | SYMBOL_IDENTIFIER '=' expression
   22      | SYMBOL_IDENTIFIER '[' expression ']' '=' expression

   23 expression: '(' expression ')'
   24           | expression op expression
   25           | SYMBOL_IDENTIFIER '[' expression ']'
   26           | SYMBOL_IDENTIFIER
   27           | value
   28           | SYMBOL_IDENTIFIER '(' arg ')'
   29           | '&' SYMBOL_IDENTIFIER
   30           | '$' SYMBOL_IDENTIFIER

   31 op: '+'
   32   | '-'
   33   | '*'
   34   | '/'
   35   | '>'
   36   | '<'
   37   | OPERATOR_EQ
   38   | OPERATOR_GE
   39   | OPERATOR_LE
   40   | OPERATOR_OR
   41   | OPERATOR_AND
   42   | OPERATOR_NE

   43 arg: /* vazio */
   44    | value ',' arg
   45    | SYMBOL_IDENTIFIER ',' arg
   46    | SYMBOL_IDENTIFIER
   47    | value

   48 value: SYMBOL_LIT_INTEGER
   49      | SYMBOL_LIT_FALSE
   50      | SYMBOL_LIT_TRUE
   51      | SYMBOL_LIT_CHAR
   52      | SYMBOL_LIT_STRING

   53 output_rest: /* vazio */
   54            | ',' expression output_rest

   55 flux_control: KW_IF '(' expression ')' then
   56             | KW_LOOP '(' simple_command ';' expression ';' simple_command ')' command_list

   57 then: KW_THEN option else

   58 else: /* vazio */
   59     | KW_ELSE option

   60 option: command_list
   61       | simple_command

   62 local_var_def_list: /* vazio */
   63                   | local_var_def local_var_def_list

   64 local_var_def: type SYMBOL_IDENTIFIER ':' value ';'
   65              | type '$' SYMBOL_IDENTIFIER ':' value ';'

   66 param: /* vazio */
   67      | type SYMBOL_IDENTIFIER paramseq

   68 paramseq: /* vazio */
   69         | ',' type SYMBOL_IDENTIFIER paramseq

   70 symbol_lit_seq: value
   71               | value symbol_lit_seq

   72 type: KW_WORD
   73     | KW_BOOL
   74     | KW_BYTE


Terminais, com as regras onde eles aparecem

SYMBOL_UNDEFINED (0) 0
SYMBOL_LIT_INTEGER (1) 6 8 48
SYMBOL_LIT_FLOATING (2)
SYMBOL_LIT_TRUE (3) 50
SYMBOL_LIT_FALSE (4) 49
SYMBOL_LIT_CHAR (5) 51
SYMBOL_LIT_STRING (6) 52
SYMBOL_IDENTIFIER (7) 3 4 5 6 7 16 19 20 21 22 25 26 28 29 30 45 46
    64 65 67 69
'$' (36) 5 30 65
'&' (38) 29
'(' (40) 9 23 28 55 56
')' (41) 9 23 28 55 56
'*' (42) 33
'+' (43) 19 20 31
',' (44) 44 45 54 69
'-' (45) 32
'/' (47) 34
':' (58) 4 5 8 64 65
';' (59) 4 5 6 8 12 56 64 65
'<' (60) 36
'=' (61) 21 22
'>' (62) 35
'[' (91) 6 8 22 25
']' (93) 6 8 22 25
'{' (123) 10
'}' (125) 10
error (256)
KW_WORD (500) 72
KW_BOOL (501) 73
KW_BYTE (502) 74
KW_IF (503) 55
KW_THEN (504) 57
KW_ELSE (505) 59
KW_LOOP (506) 56
KW_INPUT (507) 16
KW_RETURN (508) 18
KW_OUTPUT (509) 17
OPERATOR_LE (510) 39
OPERATOR_GE (511) 38
OPERATOR_EQ (512) 37
OPERATOR_NE (513) 42
OPERATOR_AND (514) 41
OPERATOR_OR (515) 40
NAT_FUNC (516)
NAT_VEC (517)
NAT_ESC (518)
NAT_PTR (519)
NAT_PTR_ADDR (520)
COUNT_DEF_ERROR (1500)
ERROR (1501)
TOKEN_ERROR (1503)


Não-terminais com as regras onde eles aparecem

$accept (52)
    à esquerda: 0
init (53)
    à esquerda: 1, à direita: 0
program (54)
    à esquerda: 2 3 4 5 6 7, à direita: 1 3 4 5 6 7
index_init (55)
    à esquerda: 8, à direita: 7
func_body (56)
    à esquerda: 9, à direita: 3
command_list (57)
    à esquerda: 10, à direita: 9 56 60
commands (58)
    à esquerda: 11 12, à direita: 10 12
simple_command (59)
    à esquerda: 13 14 15 16 17 18, à direita: 12 56 61
atrib (60)
    à esquerda: 19 20 21 22, à direita: 14
expression (61)
    à esquerda: 23 24 25 26 27 28 29 30, à direita: 17 18 21 22 23
    24 25 54 55 56
op (62)
    à esquerda: 31 32 33 34 35 36 37 38 39 40 41 42, à direita: 24
arg (63)
    à esquerda: 43 44 45 46 47, à direita: 28 44 45
value (64)
    à esquerda: 48 49 50 51 52, à direita: 4 5 27 44 47 64 65 70
    71
output_rest (65)
    à esquerda: 53 54, à direita: 17 54
flux_control (66)
    à esquerda: 55 56, à direita: 15
then (67)
    à esquerda: 57, à direita: 55
else (68)
    à esquerda: 58 59, à direita: 57
option (69)
    à esquerda: 60 61, à direita: 57 59
local_var_def_list (70)
    à esquerda: 62 63, à direita: 9 63
local_var_def (71)
    à esquerda: 64 65, à direita: 63
param (72)
    à esquerda: 66 67, à direita: 9
paramseq (73)
    à esquerda: 68 69, à direita: 67 69
symbol_lit_seq (74)
    à esquerda: 70 71, à direita: 8 71
type (75)
    à esquerda: 72 73 74, à direita: 3 4 5 6 7 64 65 67 69


estado 0

    0 $accept: . init SYMBOL_UNDEFINED

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 2 (program)

    init     ir ao estado 4
    program  ir ao estado 5
    type     ir ao estado 6


estado 1

   72 type: KW_WORD .

    $padrão  reduzir usando a regra 72 (type)


estado 2

   73 type: KW_BOOL .

    $padrão  reduzir usando a regra 73 (type)


estado 3

   74 type: KW_BYTE .

    $padrão  reduzir usando a regra 74 (type)


estado 4

    0 $accept: init . SYMBOL_UNDEFINED

    SYMBOL_UNDEFINED  deslocar, e ir ao estado 7


estado 5

    1 init: program .

    $padrão  reduzir usando a regra 1 (init)


estado 6

    3 program: type . SYMBOL_IDENTIFIER func_body program
    4        | type . SYMBOL_IDENTIFIER ':' value ';' program
    5        | type . '$' SYMBOL_IDENTIFIER ':' value ';' program
    6        | type . SYMBOL_IDENTIFIER '[' SYMBOL_LIT_INTEGER ']' ';' program
    7        | type . SYMBOL_IDENTIFIER index_init program

    SYMBOL_IDENTIFIER  deslocar, e ir ao estado 8
    '$'                deslocar, e ir ao estado 9


estado 7

    0 $accept: init SYMBOL_UNDEFINED .

    $padrão  aceitar


estado 8

    3 program: type SYMBOL_IDENTIFIER . func_body program
    4        | type SYMBOL_IDENTIFIER . ':' value ';' program
    6        | type SYMBOL_IDENTIFIER . '[' SYMBOL_LIT_INTEGER ']' ';' program
    7        | type SYMBOL_IDENTIFIER . index_init program

    ':'  deslocar, e ir ao estado 10
    '['  deslocar, e ir ao estado 11
    '('  deslocar, e ir ao estado 12

    index_init  ir ao estado 13
    func_body   ir ao estado 14


estado 9

    5 program: type '$' . SYMBOL_IDENTIFIER ':' value ';' program

    SYMBOL_IDENTIFIER  deslocar, e ir ao estado 15


estado 10

    4 program: type SYMBOL_IDENTIFIER ':' . value ';' program

    SYMBOL_LIT_INTEGER  deslocar, e ir ao estado 16
    SYMBOL_LIT_TRUE     deslocar, e ir ao estado 17
    SYMBOL_LIT_FALSE    deslocar, e ir ao estado 18
    SYMBOL_LIT_CHAR     deslocar, e ir ao estado 19
    SYMBOL_LIT_STRING   deslocar, e ir ao estado 20

    value  ir ao estado 21


estado 11

    6 program: type SYMBOL_IDENTIFIER '[' . SYMBOL_LIT_INTEGER ']' ';' program
    8 index_init: '[' . SYMBOL_LIT_INTEGER ']' ':' symbol_lit_seq ';'

    SYMBOL_LIT_INTEGER  deslocar, e ir ao estado 22


estado 12

    9 func_body: '(' . param ')' local_var_def_list command_list

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 66 (param)

    param  ir ao estado 23
    type   ir ao estado 24


estado 13

    7 program: type SYMBOL_IDENTIFIER index_init . program

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 2 (program)

    program  ir ao estado 25
    type     ir ao estado 6


estado 14

    3 program: type SYMBOL_IDENTIFIER func_body . program

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 2 (program)

    program  ir ao estado 26
    type     ir ao estado 6


estado 15

    5 program: type '$' SYMBOL_IDENTIFIER . ':' value ';' program

    ':'  deslocar, e ir ao estado 27


estado 16

   48 value: SYMBOL_LIT_INTEGER .

    $padrão  reduzir usando a regra 48 (value)


estado 17

   50 value: SYMBOL_LIT_TRUE .

    $padrão  reduzir usando a regra 50 (value)


estado 18

   49 value: SYMBOL_LIT_FALSE .

    $padrão  reduzir usando a regra 49 (value)


estado 19

   51 value: SYMBOL_LIT_CHAR .

    $padrão  reduzir usando a regra 51 (value)


estado 20

   52 value: SYMBOL_LIT_STRING .

    $padrão  reduzir usando a regra 52 (value)


estado 21

    4 program: type SYMBOL_IDENTIFIER ':' value . ';' program

    ';'  deslocar, e ir ao estado 28


estado 22

    6 program: type SYMBOL_IDENTIFIER '[' SYMBOL_LIT_INTEGER . ']' ';' program
    8 index_init: '[' SYMBOL_LIT_INTEGER . ']' ':' symbol_lit_seq ';'

    ']'  deslocar, e ir ao estado 29


estado 23

    9 func_body: '(' param . ')' local_var_def_list command_list

    ')'  deslocar, e ir ao estado 30


estado 24

   67 param: type . SYMBOL_IDENTIFIER paramseq

    SYMBOL_IDENTIFIER  deslocar, e ir ao estado 31


estado 25

    7 program: type SYMBOL_IDENTIFIER index_init program .

    $padrão  reduzir usando a regra 7 (program)


estado 26

    3 program: type SYMBOL_IDENTIFIER func_body program .

    $padrão  reduzir usando a regra 3 (program)


estado 27

    5 program: type '$' SYMBOL_IDENTIFIER ':' . value ';' program

    SYMBOL_LIT_INTEGER  deslocar, e ir ao estado 16
    SYMBOL_LIT_TRUE     deslocar, e ir ao estado 17
    SYMBOL_LIT_FALSE    deslocar, e ir ao estado 18
    SYMBOL_LIT_CHAR     deslocar, e ir ao estado 19
    SYMBOL_LIT_STRING   deslocar, e ir ao estado 20

    value  ir ao estado 32


estado 28

    4 program: type SYMBOL_IDENTIFIER ':' value ';' . program

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 2 (program)

    program  ir ao estado 33
    type     ir ao estado 6


estado 29

    6 program: type SYMBOL_IDENTIFIER '[' SYMBOL_LIT_INTEGER ']' . ';' program
    8 index_init: '[' SYMBOL_LIT_INTEGER ']' . ':' symbol_lit_seq ';'

    ':'  deslocar, e ir ao estado 34
    ';'  deslocar, e ir ao estado 35


estado 30

    9 func_body: '(' param ')' . local_var_def_list command_list

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 62 (local_var_def_list)

    local_var_def_list  ir ao estado 36
    local_var_def       ir ao estado 37
    type                ir ao estado 38


estado 31

   67 param: type SYMBOL_IDENTIFIER . paramseq

    ','  deslocar, e ir ao estado 39

    $padrão  reduzir usando a regra 68 (paramseq)

    paramseq  ir ao estado 40


estado 32

    5 program: type '$' SYMBOL_IDENTIFIER ':' value . ';' program

    ';'  deslocar, e ir ao estado 41


estado 33

    4 program: type SYMBOL_IDENTIFIER ':' value ';' program .

    $padrão  reduzir usando a regra 4 (program)


estado 34

    8 index_init: '[' SYMBOL_LIT_INTEGER ']' ':' . symbol_lit_seq ';'

    SYMBOL_LIT_INTEGER  deslocar, e ir ao estado 16
    SYMBOL_LIT_TRUE     deslocar, e ir ao estado 17
    SYMBOL_LIT_FALSE    deslocar, e ir ao estado 18
    SYMBOL_LIT_CHAR     deslocar, e ir ao estado 19
    SYMBOL_LIT_STRING   deslocar, e ir ao estado 20

    value           ir ao estado 42
    symbol_lit_seq  ir ao estado 43


estado 35

    6 program: type SYMBOL_IDENTIFIER '[' SYMBOL_LIT_INTEGER ']' ';' . program

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 2 (program)

    program  ir ao estado 44
    type     ir ao estado 6


estado 36

    9 func_body: '(' param ')' local_var_def_list . command_list

    '{'  deslocar, e ir ao estado 45

    command_list  ir ao estado 46


estado 37

   63 local_var_def_list: local_var_def . local_var_def_list

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 62 (local_var_def_list)

    local_var_def_list  ir ao estado 47
    local_var_def       ir ao estado 37
    type                ir ao estado 38


estado 38

   64 local_var_def: type . SYMBOL_IDENTIFIER ':' value ';'
   65              | type . '$' SYMBOL_IDENTIFIER ':' value ';'

    SYMBOL_IDENTIFIER  deslocar, e ir ao estado 48
    '$'                deslocar, e ir ao estado 49


estado 39

   69 paramseq: ',' . type SYMBOL_IDENTIFIER paramseq

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    type  ir ao estado 50


estado 40

   67 param: type SYMBOL_IDENTIFIER paramseq .

    $padrão  reduzir usando a regra 67 (param)


estado 41

    5 program: type '$' SYMBOL_IDENTIFIER ':' value ';' . program

    KW_WORD  deslocar, e ir ao estado 1
    KW_BOOL  deslocar, e ir ao estado 2
    KW_BYTE  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 2 (program)

    program  ir ao estado 51
    type     ir ao estado 6


estado 42

   70 symbol_lit_seq: value .
   71               | value . symbol_lit_seq

    SYMBOL_LIT_INTEGER  deslocar, e ir ao estado 16
    SYMBOL_LIT_TRUE     deslocar, e ir ao estado 17
    SYMBOL_LIT_FALSE    deslocar, e ir ao estado 18
    SYMBOL_LIT_CHAR     deslocar, e ir ao estado 19
    SYMBOL_LIT_STRING   deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 70 (symbol_lit_seq)

    value           ir ao estado 42
    symbol_lit_seq  ir ao estado 52


estado 43

    8 index_init: '[' SYMBOL_LIT_INTEGER ']' ':' symbol_lit_seq . ';'

    ';'  deslocar, e ir ao estado 53


estado 44

    6 program: type SYMBOL_IDENTIFIER '[' SYMBOL_LIT_INTEGER ']' ';' program .

    $padrão  reduzir usando a regra 6 (program)


estado 45

   10 command_list: '{' . commands '}'

    KW_IF              deslocar, e ir ao estado 54
    KW_LOOP            deslocar, e ir ao estado 55
    KW_INPUT           deslocar, e ir ao estado 56
    KW_RETURN          deslocar, e ir ao estado 57
    KW_OUTPUT          deslocar, e ir ao estado 58
    SYMBOL_IDENTIFIER  deslocar, e ir ao estado 59
    '+'                deslocar, e ir ao estado 60

    ';'       reduzir usando a regra 13 (simple_command)
    $padrão  reduzir usando a regra 11 (commands)

    commands        ir ao estado 61
    simple_command  ir ao estado 62
    atrib           ir ao estado 63
    flux_control    ir ao estado 64


estado 46

    9 func_body: '(' param ')' local_var_def_list command_list .

    $padrão  reduzir usando a regra 9 (func_body)


estado 47

   63 local_var_def_list: local_var_def local_var_def_list .

    $padrão  reduzir usando a regra 63 (local_var_def_list)


estado 48

   64 local_var_def: type SYMBOL_IDENTIFIER . ':' value ';'

    ':'  deslocar, e ir ao estado 65


estado 49

   65 local_var_def: type '$' . SYMBOL_IDENTIFIER ':' value ';'

    SYMBOL_IDENTIFIER  deslocar, e ir ao estado 66


estado 50

   69 paramseq: ',' type . SYMBOL_IDENTIFIER paramseq

    SYMBOL_IDENTIFIER  deslocar, e ir ao estado 67


estado 51

    5 program: type '$' SYMBOL_IDENTIFIER ':' value ';' program .

    $padrão  reduzir usando a regra 5 (program)


estado 52

   71 symbol_lit_seq: value symbol_lit_seq .

    $padrão  reduzir usando a regra 71 (symbol_lit_seq)


estado 53

    8 index_init: '[' SYMBOL_LIT_INTEGER ']' ':' symbol_lit_seq ';' .

    $padrão  reduzir usando a regra 8 (index_init)


estado 54

   55 flux_control: KW_IF . '(' expression ')' then

    '('  deslocar, e ir ao estado 68


estado 55

   56 flux_control: KW_LOOP . '(' simple_command ';' expression ';' simple_command ')' command_list

    '('  deslocar, e ir ao estado 69


estado 56

   16 simple_command: KW_INPUT . SYMBOL_IDENTIFIER

    SYMBOL_IDENTIFIER  deslocar, e ir ao estado 70


estado 57

   18 simple_command: KW_RETURN . expression

    SYMBOL_LIT_INTEGER  deslocar, e ir ao estado 16
    SYMBOL_LIT_TRUE     deslocar, e ir ao estado 17
    SYMBOL_LIT_FALSE    deslocar, e ir ao estado 18
    SYMBOL_LIT_CHAR     deslocar, e ir ao estado 19
    SYMBOL_LIT_STRING   deslocar, e ir ao estado 20
    SYMBOL_IDENTIFIER   deslocar, e ir ao estado 71
    '$'                 deslocar, e ir ao estado 72
    '('                 deslocar, e ir ao estado 73
    '&'                 deslocar, e ir ao estado 74

    expression  ir ao estado 75
    value       ir ao estado 76


estado 58

   17 simple_command: KW_OUTPUT . expression output_rest
